# 2DNGE

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build_and_run.bat  build_and_test.bat  docker-compose.yml  test.py
.claude/: settings.local.json
app/: CMakeLists.txt  main.cpp
docs/: stack.txt  testing.md  testing.txt
engine/: CMakeLists.txt
engine/components/: Transform.h
engine/core/: Application.cpp  Application.h  IScene.h  InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h
engine/core/ecs/: EntityManager.cpp  EntityManager.h  View.h
engine/core/ecs/components/: Collider.h  RigidBody.h  Sprite.h
engine/ecs/: ComponentPool.h  ComponentTypeID.h  Entity.h  EntityManager.cpp  EntityManager.h  View.h
engine/ecs/components/: Collider.h  Sprite.h
engine/managers/: PhysicsEngine.cpp  PhysicsEngine.h
engine/physics/: CollisionDetector.cpp  CollisionDetector.h  CollisionHandler.cpp  CollisionHandler.h  Math.h  PhysicsManager.cpp  PhysicsManager.h
engine/renderer/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h
engine/renderer/helpers/: SpriteRenderer.cpp  SpriteRenderer.h
engine/scripting/: EngineBindings.cpp  EngineBindings.h  ScriptEngine.cpp  ScriptEngine.h  ScriptableScene.cpp  ScriptableScene.h  ScriptingConfig.h.in
engine/scripting/bindings/: AssetBindings.cpp  AssetBindings.h  ECSBindings.cpp  ECSBindings.h  InputBindings.cpp  InputBindings.h  PhysicsBindings.cpp  PhysicsBindings.h  RenderBindings.cpp  RenderBindings.h
game/: CMakeLists.txt  engine.pyi
game/lib/: GameObject.py  Player.py
game/scenes/: BreakoutScene.py  MainScene.py  PhysicsTestScene.cpp  PhysicsTestScene.h
game/sprites/: Armored001.aseprite  Ball.aseprite  BasicHuman001.aseprite  BrickGreen.aseprite  BrickOrange.aseprite  BrickRed.aseprite  Debug.aseprite  Paddle.aseprite  sample-001.aseprite
testing/: CMakeLists.txt
testing/test_core/: test_application.cpp  test_inputManager.cpp  test_sceneManager.cpp  test_timer.cpp  test_window.cpp
testing/test_ecs/: test_componentPool.cpp  test_entity.cpp  test_entityManager.cpp  test_view.cpp
testing/test_physics/: test_collisionDetector.cpp  test_collisionHandler.cpp  test_math.cpp  test_physicsManager.cpp
testing/test_scripting/: engine.pyi  test_bindings.py  test_engineBindings.cpp  test_scene_bad_syntax.py  test_scene_entities.py  test_scene_full_lifecycle.py  test_scene_init.py  test_scene_input.py  test_scene_minimal.py  test_scene_render.py  test_scene_update_counter.py  test_scene_update_position.py  test_script.py  test_scriptEngine.cpp  test_scriptableScene.cpp
tools/: generate_stubs.py
